<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/Set"
        android:textSize="22sp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/arr_back"
        app:iconTint="@color/black"
        app:iconPadding="28dp"
        style="?android:attr/borderlessButtonStyle"/>

    <RelativeLayout
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Black_T"
            android:textAllCaps="false"
            android:textColor="@color/pure_black"/>
            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

    </RelativeLayout>

    <RelativeLayout
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Share"
            android:textAllCaps="false"
            android:textColor="@color/pure_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/share"
            app:iconTint="@color/grey" />

    </RelativeLayout>

    <RelativeLayout
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Help"
            android:textAllCaps="false"
            android:textColor="@color/pure_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/group"
            app:iconTint="@color/grey" />

    </RelativeLayout>

    <RelativeLayout

        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rule"
            android:textAllCaps="false"
            android:textColor="@color/pure_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/arrow"
            app:iconTint="@color/grey"/>

    </RelativeLayout>

</LinearLayout>